fix(header): fix vertical subnav (core themes) spacings

--- a/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
@@ -277,7 +277,12 @@
           gap: 0;
 
           .nav-item {
-            height: variables.$clr_baselineRem_1_5;
+            @include mixins.css-var(
+              height,
+              clr-responsive-nav-item-height,
+              variables.$clr_baselineRem_1_5,
+              variables.$clr-use-custom-properties
+            );
             margin-right: 0;
           }
 
